more REST-like to use PUT to create user instead of POST
